2014-06-30  Per Bothner  <per@bothner.com>

	Use new annotations to record language-specific types in class files.
	* Language.java (encodeType, decodeType): New methods.
	(resolveTypeVariables, resolveTypeVariable): Moved from
	PrimProcedure.java.
	(declFromField): Check SourceName annotation.
	* PrimProcedure.java (resolveTypeVariables, resolveTypeVariable):
	Moved from Language.java.
	(<init>): Check SourceMethodName annotation.
	* Declaration.java (makeField): Possibly add SourceType annotation.
	* LambdaExp.java (addMethodFor): Possibly add SourceMethodType
	annotation.
	* TypeValue.java (encodeType): New method.

	* PrimProcedure.java (matchN): Add not-yet-needed call to convertToRaw.

	* PrimProcedure.java (matchN): Support rest (varargs) arrays
	of primitive type.

	* PrimProcedure.java (compileArgs): Fix thinko re array type.

	* ModuleInfo.java (setCompilation): Make sure filename is non-null.

	* InlineCalls.java (checkType): On type error, if type is PrimType,
	convert it to a boxed type to force a run-time exception.
	* Compilation.java (makeCoercion): Change return type to ApplyExp.

2014-06-29  Per Bothner  <per@bothner.com>

	* LambdaExp.java (class Closure): Change to a static member class.

2014-06-28  Per Bothner  <per@bothner.com>

	* Declaration.java (getAnnotation *2): New method.
	* LambdaExp.java (compileSetField): Emit field annotations.
	(compileAsMethod): Emit method annotations.

2014-06-25  Per Bothner  <per@bothner.com>

	* LambdaExp.java (allocFieldFor): Only reuse nameDecl's field if
	this LambdaExp is the only value of the nameDecl.

2014-06-16  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (comp): Make field private.
	(setCompilation):  Allow setting to null.
	(getModuleExp): comp is always null if m is.
	* ModuleManager.java (find): Simplify to use setCompilation.
	* Compilation.java (cleanupAfterCompilation):
	Use ModileInfo#setCompilation.
	* ModuleExp.java: Use getCompilation.

2014-06-04  Per Bothner  <per@bothner.com>
